@@ -35,7 +35,8 @@ get.pop,
 pop.trajectories,
 get.trajectory.indices,
 cohorts,
-pop.cohorts.plot
+pop.cohorts.plot,
+mac.expression
 )
 
 # register S3 methods
