@@ -65,7 +65,7 @@ There are two methods available for generating aggregations of population projec
 	Aggregations are created by summing trajectories over countries of the given region.
 }
 \item{Region-based Method}{
-The aggregation is generated using the same algorithm as population projections for single countries (function \code{\link{pop.predict}}), but it operates on aggregated input components. These are created as follows. Here \eqn{c} denotes countries over which we aggregate a region \eqn{R}, \eqn{s \in \{m, f\}}, \eqn{a}, \eqn{t} denote sex, age category and time, respectively. \eqn{t=P} denotes the present year of the prediction. \eqn{N_{s,a,t}^c} and \eqn{M_{s,a,t}^c}, respectively, denotes the historical population count and the Bayesian predictive median of population, respectively, of sex \eqn{s}, in age category \eqn{a} at time \eqn{t} for country \eqn{c} (refer to the links in parentheses for description of the data):
+The aggregation is generated using the same algorithm as population projections for single countries (function \code{\link{pop.predict}}), but it operates on aggregated input components. These are created as follows. Here \eqn{c} denotes countries over which we aggregate a region \eqn{R}, \eqn{s \in \{m, f\}}{s in {m,f}}, \eqn{a}, and \eqn{t} denote sex, age category and time, respectively. \eqn{t=P} denotes the present year of the prediction. \eqn{N_{s,a,t}^c} and \eqn{M_{s,a,t}^c}, respectively, denotes the historical population count and the Bayesian predictive median of population, respectively, of sex \eqn{s}, in age category \eqn{a} at time \eqn{t} for country \eqn{c} (refer to the links in parentheses for description of the data):
 \describe{
 	\item{Initial sex and age-specific population (\link[wpp2012:popM]{popM, popF}):}{\eqn{N_{s,a,t=P}^R = \sum_c N_{s,a,t=P}^c}}
 	\item{Sex and age-specific death rates (\link[wpp2012:mxM]{mxM, mxF}):}{\eqn{mx_{s,a,t}^R = \frac{\sum_c(mx_{s,a,t}^c \cdot N_{s,a,t})}{\sum_c N_{s,a,t}}}{mx_{s,a,t}^R = \sum_c(mx_{s,a,t}^c * N_{s,a,t}) / \sum_c N_{s,a,t}}}
